package model.dungeon.entity;

public abstract class Entity {

    /**
     * To draw the entity
     */
    public abstract void draw();
}
